# Resource-Aware-Coordination-AirSim

./: .gitignore
AirSim/: migration_readme.md  testing_readme.md
AirSim/AirLib/include/common/: VectorMath.hpp
AirSim/ros/src/airsim_ros_pkgs/: CMakeLists.txt
AirSim/ros/src/airsim_ros_pkgs/include/: pd_position_controller_simple.h
AirSim/ros/src/image_covering_coordination/: CMakeLists.txt
AirSim/ros/src/multi_target_tracking/: CMakeLists.txt  package.xml
AirSim/ros/src/multi_target_tracking/data_media/: tf_tree.dot
AirSim/ros/src/multi_target_tracking/include/multi_target_tracking/: EXPStarSix.h  multi_target_tracking_coord_RAG.h  multi_target_tracking_coordination.h
AirSim/ros/src/multi_target_tracking/launch/: combined_launchfile.launch  multi_coord_nodes_RAG_10p15e.launch  multi_coord_nodes_RAG_5p10e.launch  multitracking_coord_node_RAG_DEBUG.launch  multitracking_coord_node_RAG_DEBUG2.launch  multitracking_coord_nodes_10p15e.launch  multitracking_coord_nodes_2p2e.launch  multitracking_coord_nodes_5p10e.launch  multitracking_coord_nodes_8p12e.launch  multitracking_coord_nodes_DEBUG.launch  odom_to_path_nodes_10p15e.launch  odom_to_path_nodes_2p2e.launch  odom_to_path_nodes_8p12e.launch  pursuer_evader_data_publisher.launch  rviz.launch
AirSim/ros/src/multi_target_tracking/msg/: MarginalGainRAG.msg  PursuerEvaderData.msg  PursuerEvaderDataArray.msg
AirSim/ros/src/multi_target_tracking/rviz/: 10p15e_traj.rviz  10p15e_trajpath.rviz  2p2e_rgbdss.rviz  8p12e_trajpath.rviz  path_traj_axes.rviz
AirSim/ros/src/multi_target_tracking/scripts/: auto_control_evaders.py  auto_control_evaders_keypress.py  auto_control_evaders_stoch_herd.py  auto_control_evaders_stoch_herd2p2e.py  auto_control_evaders_stoch_herd_keypress.py  auto_control_evaders_stochastic.py  auto_control_evaders_stochastic_keypress.py  autogen_coordnode_launchfile.py  evader_drones_auto_motion.py  evader_drones_box_pattern.py  odom_to_path_node.py  pursuer_evader_data.py  takeoff_land_drones.py  total_min_distance_logger.py  total_mindist_numFOV_shadederror.py
AirSim/ros/src/multi_target_tracking/src/: EXPStarSix.cpp  airsim_control_test.cpp  multi_target_tracking_coord_RAG.cpp  multi_target_tracking_coordination.cpp
AirSim/ros2/src/image_covering_coordination/: CMakeLists.txt  package.xml  total_score_collectiveFOV_logger.cpp
AirSim/ros2/src/image_covering_coordination/include/image_covering_coordination/: image_covering_coord_SG.h  total_score_collectiveFOV_logger.h
AirSim/ros2/src/image_covering_coordination/msg/: ImageCovering.msg
AirSim/ros2/src/image_covering_coordination/src/: image_covering_coord_SG.cpp  image_covering_coordination.cpp  total_score_collectiveFOV_logger.cpp
AirSim/ros2/src/multi_target_tracking/: CMakeLists.txt  package.xml
AirSim/ros2/src/navigation/: package.xml
