<!-- <?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_covering_coordination</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="multi_robot@todo.todo">multi_robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> -->

<?xml version="1.0"?>
<package format="3">
  <name>image_covering_coordination</name>
  <version>0.0.1</version>
  <description>The image_covering_coordination package migrated to ROS2</description>
  
  <maintainer email="iral@todo.todo">sgari</maintainer>
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and execution dependencies -->
  <depend>rosidl_default_generators</depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>airsim_ros_pkgs</depend>
  <depend>multi_target_tracking</depend>

  <!-- Linting dependencies for quality checks -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


